metadata/force-app/main/default/objects/CustomName_nqYEo__c/CustomName_nqYEo__c.object-meta.xml
<CustomObject>
    <description>Description_bWeCg</description>
    <label>CustomLabel_MQaTq</label>
    <nameField>
        <label>CustomLabel_MQaTq</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_MQaTqs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>