metadata/force-app/main/default/objects/CustomName_nqYEo__c/fields/CustomField_bCWsu__c.field-meta.xml
<CustomField>
    <fullName>CustomField_bCWsu__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldscVXQ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>